Improve country search with aliases
